--- a/projects.html
+++ b/projects.html
@@ -71,11 +71,11 @@
 </div>
 </div>
 
-<video width="320" height="240" autoplay>
-    <source src="vid.mp4" type="video/mp4">
-    <source src="vid.ogg" type="video/ogg">
-
-  </video>
+<video width="320" height="240" controls>
+  <source src="vid.mp4" type="video/mp4">
+  <source src="vid.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
 
 <div class="small-container">
     <h2 class="project-section-title title">Projects</h2>
